--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ Flask-Admin==1.6.1
 Werkzeug>=3.0.0
 click==8.1.3
 gunicorn==20.1.0
-gevent==22.10.2
+gevent==25.9.1
 pytest==7.0.1
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.2
 python-dotenv==1.0.1
 rich==13.4.2
 
